# IEDnavigatorPRO

./: .gitignore  CLAUDE.md  IEDNavigatorPRO.bat  README.md  THIRD-PARTY-NOTICES.txt  VOCABULARIO.md  build_v36.ps1  compile.ps1  dev.bat  index.html  pom.xml  run.bat  run.ps1
IEDNavigator_v3.6/IEDNavigator/: IEDNavigator.bat  IEDNavigator.ps1  LEAME.txt
frontend/: .gitignore  index.html  make-icon.ps1  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: cid.ts  client.ts  pickFile.ts  types.ts  ws.ts
frontend/src/components/: ContextMenu.tsx  MenuBar.tsx  Modal.tsx  ModeCards.tsx  ModeStrip.tsx  StatusBar.tsx  Toolbar.tsx  TreeIcons.tsx
frontend/src/dialogs/: AboutDialog.tsx  CancelSboDialog.tsx  ControlDialog.tsx  DialogHost.tsx  DictionaryDialog.tsx  LegendDialog.tsx  ServerValueEditDialog.tsx  ValueEditDialog.tsx
frontend/src/layout/: ClassicLayout.tsx  DockManager.tsx  panelRegistry.tsx
frontend/src/panels/: DataModelPanel.tsx  DatasetPanel.tsx  DevicePanel.tsx  GooseMapPanel.tsx  LogPanel.tsx  (+10 more)
installer/resources/: Launcher.cs
scripts/: build-installer.ps1  make-installer-art.ps1
test/: BridgeTestServer.java  TestDataSetBrowser.java  TestGooseMap.java  TestHtmlReport.java  TestSclComm.java  TestSclCompare.java  TestSpClient.java  TestSpServer.java  TestSpSettings.java  test_ied.cid
(+106 files in other folders)
