[package]
name = "iednavigator-pro"
version = "1.0.0"
description = "IEDNavigator PRO - Explorador y simulador IEC 61850"
authors = ["Emilio Medina"]
edition = "2021"

[lib]
name = "iednavigator_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
